<resources>
    <string name="app_name">ArithmeticChallenge</string>
    <string name="graphic">graphic</string>
    <string name="addition">add</string>
    <string name="subtraction">subtract</string>
    <string name="multiplication">multiply</string>
    <string name="division">divide</string>
    <string name="additionbutton">additionButton</string>
    <string name="subtractionbutton">subtractionButton</string>
    <string name="pick_your_challenge">Pick your challenge:</string>
    <string name="mulitplicationbutton">mulitplicationButton</string>
    <string name="divisionbutton">divisionButton</string>
    <string name="how_to_play">How to play:</string>
    <string name="exit">Exit</string>
    <string name="high_score">High score: 0</string>
    <string name="yourScore">Score: 0</string>
    <string name="_1">1</string>
    <string name="_9">9</string>
    <string name="_3275">3275</string>
    <string name="_1_12">1/12</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="_8">8</string>
    <string name="_800">800</string>
    <string name="x">x</string>
    <string name="_1_x_8">1 x 8</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect</string>
    <string name="win_text">You win!</string>
    <string name="next_button">Back to Menu</string>
    <string name="scoreNum">0</string>
    <string name="highScoreNum">0</string>
</resources>
